--- a/index.html
+++ b/index.html
@@ -1,36 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <title>Document</title>
 </head>
+
 <body>
-    <div class="container-fluid">
-        <header>
+    <header>
+        <div class="container-fluid">
             <div class="d-flex justify-content-between align-items-center">
-                    <div class="box_logo_mobile py-3">
-                        <img class="img-fluid" src="./img/mobile-logo.png" alt="">
-                    </div>
-                    <div class="search_bar">
-                        <input type="text" placeholder="Prova">
-                    </div>
-                    <div class="logo_bell">
-                        <i class="fa-regular fa-bell"></i>
-                    </div>
+                <div class="box_logo_mobile py-3">
+                    <img class="img-fluid" src="./img/mobile-logo.png" alt="">
+                </div>
+                <div class="search_bar">
+                    <input type="text" placeholder="Prova">
+                </div>
+                <div class="logo_bell">
+                    <i class="fa-regular fa-bell"></i>
+                </div>
             </div>
-        </header>
-    </div>
-    <aside>
-        <div class="lateral_bar">
-            <div class="icon_top">dd</div>
-            <div class="icon_bottom">ddd</div>
         </div>
-    </aside>
-    <main></main>
+    </header>
+    <main class="d-flex">
+        <aside class="d-flex flex-column justify-content-between align-items-center">
+            <div class="icon_top pt-3">
+                <div class="home text-white">
+                    <i class="fa-solid fa-house"></i>
+                </div>
+                <div class="statics text-white">
+                    <i class="fa-solid fa-house"></i>
+                </div>
+                <div class="volum text-white">
+                    <i class="fa-solid fa-house"></i>
+                </div>
+            </div>
+            <div class="icon_bottom text-white pb-3">
+                <i class="fa-solid fa-gear"></i>
+            </div>
+        </aside>
+        <div class="cont_general d-flex flex-column">
+            <section class="bg_blue">
+                <div class="container top_main text-white">
+                    <div class="row">
+                        <div class="col-8 py-4">
+                            <h3>Nuovo Studente</h3>
+                        </div>
+                        <div class="col-8 py-4">
+                            <h2>Boolean</h2>
+                        </div>
+                        <div class="col-8 py-4">
+                            <h2> Studenti online negli</h2> 
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <table class="table caption-top">
+                                <caption>List of users</caption>
+                                <thead>
+                                    <tr>
+                                        <th scope="col">#</th>
+                                        <th scope="col">First</th>
+                                        <th scope="col">Last</th>
+                                        <th scope="col">Handle</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <th scope="row">1</th>
+                                        <td>Mark</td>
+                                        <td>Otto</td>
+                                        <td>@mdo</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">2</th>
+                                        <td>Jacob</td>
+                                        <td>Thornton</td>
+                                        <td>@fat</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">3</th>
+                                        <td>Larry</td>
+                                        <td>the Bird</td>
+                                        <td>@twitter</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </main>
 </body>
+
 </html>
