fix vari mobile first

--- a/index.html
+++ b/index.html
@@ -66,29 +66,102 @@
                     <div class="row">
                         <div class="col-12">
                             <table class="table caption-top border">
-                                <caption class="border">List of users</caption>
+                                <caption class="border text-black"><h3>Prossime classi</h3></caption>
                                 <thead>
                                     <tr>
-                                        <th scope="col">#</th>
-                                        <th scope="col">First</th>
-                                        <th scope="col">Last</th>
+                                        <th scope="col">Nome</th>
+                                        <th scope="col">Stato</th>
+                                        <th scope="col">Azioni</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <th scope="row">1</th>
-                                        <td>Mark</td>
-                                        <td>Otto</td>
+                                        <th scope="row">
+                                            <img src="./img/class-avatar.jpg" alt="">
+                                            Classe 75
+                                        </th>
+                                        <td class="badge bg-success">Done</td>
+                                        <td>
+                                            <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
+                                            <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
+                                        </td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">2</th>
-                                        <td>Jacob</td>
-                                        <td>Thornton</td>
+                                        <th scope="row">
+                                            <img src="./img/class-avatar.jpg" alt="">
+                                            Classe 75
+                                        </th>
+                                        <td class="badge bg-success">Done</td>
+                                        <td>
+                                            <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
+                                            <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
+                                        </td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">3</th>
-                                        <td>Larry</td>
-                                        <td>the Bird</td>
+                                        <th scope="row">
+                                            <img src="./img/class-avatar.jpg" alt="">
+                                            Classe 75
+                                        </th>
+                                        <td class="badge bg-warning">Process</td>
+                                        <td>
+                                            <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
+                                            <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">
+                                            <img src="./img/class-avatar.jpg" alt="">
+                                            Classe 75
+                                        </th>
+                                        <td class="badge bg-success">Done</td>
+                                        <td>
+                                            <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
+                                            <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">
+                                            <img src="./img/class-avatar.jpg" alt="">
+                                            Classe 75
+                                        </th>
+                                        <td class="badge bg-danger">Failed</td>
+                                        <td>
+                                            <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
+                                            <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">
+                                            <img src="./img/class-avatar.jpg" alt="">
+                                            Classe 75
+                                        </th>
+                                        <td class="badge bg-success">Done</td>
+                                        <td>
+                                            <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
+                                            <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">
+                                            <img src="./img/class-avatar.jpg" alt="">
+                                            Classe 75
+                                        </th>
+                                        <td class="badge bg-danger">Failed</td>
+                                        <td>
+                                            <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
+                                            <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">
+                                            <img src="./img/class-avatar.jpg" alt="">
+                                            Classe 75
+                                        </th>
+                                        <td class="badge bg-success">Done</td>
+                                        <td>
+                                            <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
+                                            <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
+                                        </td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -197,7 +270,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
-                            <div class="card" style="width: 18rem;">
+                            <div class="card w-100" style="width: 18rem;">
                                 <img src="./img/stats.jpeg" class="card-img-top" alt="...">
                                 <ul class="list-group list-group-flush">
                                     <li class="list-group-item">An item</li>
