--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <div class="row mt-2">
                         <div class="col-8 col-md-4 my-2 d-flex">
                             <h5>Nuovo Studente</h5>
-                            <button class="btn btn-outline-light ms-2">+</button>
+                            <button class="btn btn-outline-light ms-2 but">+</button>
                         </div>
                         <div class="col-8 col-md-4 my-2">
                             <div class="d-flex">
