--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="cont_general d-flex flex-column">
             <section class="bg_blue">
                 <div class="container-xl top_main text-white">
-                    <div class="row mt-2">
+                    <div class="row flex-md-row-reverse mt-2">
                         <div class="col-8 col-md-4 my-2 d-flex">
                             <h5>Nuovo Studente</h5>
                             <button class="btn btn-outline-light ms-2 but">+</button>
