--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                             </table>
                         </div>
                         <!-- F.A.Q. -->
-                        <div class="col-12 col-lg-8">
+                        <div class="col-12 col-lg-8 order-lg-3">
                             <div class="accordion" id="accordionExample">
                                 <div class="accordion-item">
                                     <h2 class="accordion-header">
@@ -278,7 +278,7 @@
                             </div>
                         </div>
                         <!-- todo -->
-                        <div class="col-12 col-lg-4">
+                        <div class="col-12 col-lg-4 order-lg-2">
                             <table class="table caption-top border">
                                 <caption class="border">Todo</caption>
                                 <thead>
@@ -325,7 +325,7 @@
                             </table>
                         </div>
                         <!-- card -->
-                        <div class="col-12 col-lg-4">
+                        <div class="col-12 col-lg-4 order-lg-4">
                             <div class="card w-100">
                                 <img src="./img/stats.jpeg" class="card-img-top" alt="...">
                                 <ul class="list-group list-group-flush">
