--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <div class="cont_general d-flex flex-column">
             <section class="bg_blue">
                 <div class="container-xl top_main text-white">
-                    <div class="row flex-md-row-reverse mt-2">
-                        <div class="col-8 col-md-4 my-2 d-flex">
+                    <div class="row mt-2">
+                        <div class="col-8 col-md-4 my-2 d-flex order-md-last">
                             <h5>Nuovo Studente</h5>
                             <button class="btn btn-outline-light ms-2 but">+</button>
                         </div>
@@ -86,8 +86,8 @@
             <section>
                 <div class="container-xl">
                     <div class="row">
+                        <div class="box col-12 col-lg-8 mt-2">
                         <!-- tabella -->
-                        <div class="col-12 col-lg-8 mt-2">
                             <table class="table caption-top border">
                                 <caption class="border text-black">
                                     <h3>Prossime classi</h3>
@@ -208,9 +208,7 @@
                                     </tr>
                                 </tbody>
                             </table>
-                        </div>
                         <!-- F.A.Q. -->
-                        <div class="col-12 col-lg-8 order-lg-3">
                             <div class="accordion" id="accordionExample">
                                 <div class="accordion-item">
                                     <h2 class="accordion-header">
@@ -278,7 +276,7 @@
                             </div>
                         </div>
                         <!-- todo -->
-                        <div class="col-12 col-lg-4 order-lg-2">
+                        <div class="box col-12 col-lg-4">
                             <table class="table caption-top border">
                                 <caption class="border">Todo</caption>
                                 <thead>
@@ -323,9 +321,7 @@
                                     </tr>
                                 </tbody>
                             </table>
-                        </div>
                         <!-- card -->
-                        <div class="col-12 col-lg-4 order-lg-4">
                             <div class="card w-100">
                                 <img src="./img/stats.jpeg" class="card-img-top" alt="...">
                                 <ul class="list-group list-group-flush">
