--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <img class="img-fluid d-none d-md-block" src="./img/logo.svg" alt="">
                 </div>
                 <div class="form-group col-8 position-relative">
-                    <input type="text" class="form-control" placeholder="prova a cercare: lezioni di Laravel">
+                    <input type="text" class="form-control ps-4" placeholder="prova a cercare: lezioni di Laravel">
                     <i id="search" class="fa-solid fa-magnifying-glass"></i>
                 </div>
                 <div class="logo_bell d-flex px-2">
